@@ -35,6 +35,7 @@
     <File name="./DocumentUndoManager.cs" subtype="Code" buildaction="Compile" />
     <File name="./EditAction.cs" subtype="Code" buildaction="Compile" />
     <File name="./Utils.cs" subtype="Code" buildaction="Compile" />
+    <File name="./Test/TestUtils.cs" subtype="Code" buildaction="Compile" />
   </Contents>
   <References>
     <ProjectReference type="Gac" localcopy="True" refto="System, Version=1.0.5000.0, Culture=neutral, PublicKeyToken=b77a5c561934e089" />
@@ -52,4 +53,5 @@
       <Widget>Monodoc.Editor.Gui.DocumentEditor</Widget>
     </ExportedWidgets>
   </GtkDesignInfo>
+  <Deployment.LinuxDeployData scriptName="monodoc.editor.gui" />
 </Project>
