@@ -1,0 +1,23 @@
+//
+// TestUtils.cs: Test unit for Utils helpers classes.
+//
+// Author:
+//   Hector E. Gomez M (hectorgm@ciencias.unam.mx)
+//
+// (C) 2007 Hector E. Gomez M
+
+using System;
+using NUnit.Framework;
+
+namespace Monodoc.Editor.Gui {
+[TestFixture()]
+public class TestUtils {
+	
+	[Test()]
+	public void TagEndsHere ()
+	{
+		DocumentEditor editor = new DocumentEditor ();
+		TextBuffer buffer = editor.Buffer;
+	}
+}
+}
